--- a/Index.html
+++ b/Index.html
@@ -9,8 +9,8 @@
 <body>
     <div class="container">
         <h1>Yanka Sousa Bulhões</h1>
-        <p><strong>Email:</strong> seuemail@email.com</p>
-        <p><strong>Telefone:</strong> (85) 98536-7598</p>
+        <p><strong>Email:</strong>kinhasousa15@hotmail.com</p>
+        <p><strong>Telefone:</strong>(85) 98536-7598</p>
         <h2>Experiência</h2>
         <p>• Desenvolvedor Frontend - Freelancer</p>
         <h2>Habilidades</h2>
